--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -8,6 +8,7 @@
     text-align: center;
     display: inline-block;
     font-size: 16px;
+    font-weight: bold;
     margin: 4px 2px;
     cursor: pointer;
   }
