--- a/src/styles/FormField.css
+++ b/src/styles/FormField.css
@@ -1,3 +1,8 @@
 .form-field {
     margin: 16px 0;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    font-weight: bold;
+    
 }
